[tool.poetry]
name = "bloc-client-python"
version = "0.1.0"
description = "python client sdk for bloc"
authors = ["pillipanda <pillipanda@126.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.21.1"
pydantic = "^1.8.2"
pika = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
